--- a/chipiron/scripts/learn_from_scratch_value_and_fixed_boards/exp_options.yaml
+++ b/chipiron/scripts/learn_from_scratch_value_and_fixed_boards/exp_options.yaml
@@ -35,23 +35,28 @@ evaluating_player_args:
   name: RecurZipfBase3
   main_move_selector:
     type: TreeAndValue
-    node_selector:
-      type: RecurZipfBase
-      move_explorer_priority: priority_best
-    opening_type: all_children
-    recommender_rule:
-      type: almost_equal_logistic
-      temperature: 2
-    stopping_criterion:
-        type: tree_branch_limit
-        tree_branch_limit: 100000
-    board_evaluator:
-      type: neural_network
+    anemone_args: 
+      type: TreeAndValue
+      node_selector:
+        type: RecurZipfBase
+        branch_explorer_priority: priority_best
+      opening_type: all_children
+      recommender_rule:
+        type: almost_equal_logistic
+        temperature: 2
+      stopping_criterion:
+          type: tree_branch_limit
+          tree_branch_limit: 100000
+    evaluator_args:
       internal_representation_type: '364_bug'
-      syzygy_evaluation: True
-      neural_nets_model_and_architecture:
-        model_weights_file_name: "package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt"
-        nn_architecture_args_path_to_yaml_file: 'package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/architecture.yaml'
+      master_board_evaluator:
+        syzygy_evaluation: True
+        evaluation_scale: stockfish_based
+        board_evaluator:
+          type: neural_network
+          neural_nets_model_and_architecture:
+            model_weights_file_name: "package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_player_to_move.pt"
+            nn_architecture_args_path_to_yaml_file: 'package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/architecture.yaml'
   syzygy_play: True
 
 
