--- a/chipiron/data/players/player_config/UniformDepth.yaml
+++ b/chipiron/data/players/player_config/UniformDepth.yaml
@@ -1,17 +1,19 @@
 name: Uniform
 main_move_selector:
   type: TreeAndValue
-  node_selector:
-    type: Uniform
+  anemone_args: 
+    type: TreeAndValue
+    node_selector:
+      type: Uniform
 
-  opening_type: all_children
-  recommender_rule:
-    type: almost_equal_logistic
-    temperature: 2
-  stopping_criterion:
-      type: depth_limit
-      depth_limit: 3
-  node_evaluator:
+    opening_type: all_children
+    recommender_rule:
+      type: almost_equal_logistic
+      temperature: 2
+    stopping_criterion:
+        type: depth_limit
+        depth_limit: 3
+  evaluator_args:
     internal_representation_type: '364_bug'
     master_board_evaluator:
       syzygy_evaluation: True
@@ -19,6 +21,6 @@ main_move_selector:
       board_evaluator:
         type: neural_network
         neural_nets_model_and_architecture:
-          model_weights_file_name: "package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt"
+          model_weights_file_name: "package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_player_to_move.pt"
           nn_architecture_args_path_to_yaml_file: 'package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/architecture.yaml'
 syzygy_play: True
