--- a/tests/integration_test/replay_games/games_0_W:RecurZipfBase3-vs-B:RecurZipfBase3_game_report.yaml
+++ b/tests/integration_test/replay_games/games_0_W:RecurZipfBase3-vs-B:RecurZipfBase3_game_report.yaml
@@ -1,4 +1,153 @@
-fen_history:
+final_game_result: win_for_white
+action_history:
+- d2d4
+- d7d5
+- c1f4
+- c7c5
+- e2e3
+- g8f6
+- g1f3
+- a7a6
+- c2c3
+- b8d7
+- b1d2
+- d8c7
+- f4c7
+- e7e6
+- c7f4
+- f8e7
+- f3e5
+- e8g8
+- a1c1
+- h7h6
+- f1d3
+- f8e8
+- f4h6
+- g7h6
+- h1g1
+- e7d8
+- g2g3
+- d8c7
+- f2f4
+- d7b6
+- g3g4
+- c8d7
+- e5d7
+- a8d8
+- d7c5
+- g8h8
+- c5a6
+- b7a6
+- f4f5
+- e6e5
+- d2f3
+- f6g4
+- g1g4
+- e5e4
+- d3f1
+- e4f3
+- f1h3
+- h6h5
+- d1f3
+- h5g4
+- f3h1
+- g4h3
+- c1c2
+- d8c8
+- e1e2
+- c7b8
+- e2d1
+- b6c4
+- h1f3
+- h8g7
+- f3h3
+- e8e4
+- h3f1
+- b8h2
+- f1h3
+- h2d6
+- c2f2
+- c8e8
+- d1c2
+- d6e7
+- b2b4
+- f7f6
+- b4b5
+- e7a3
+- c2d3
+- a6a5
+- h3f3
+- g7g8
+- d3c2
+- g8f7
+- f3h3
+- a3d6
+- f2f3
+- a5a4
+- c2b1
+- a4a3
+- h3h1
+- f7e7
+- h1h3
+- c4e3
+- f3e3
+- e7d7
+- h3h6
+- d7c8
+- e3f3
+- d6e7
+- f3f2
+- c8b7
+- b5b6
+- b7b6
+- f2f3
+- e7d6
+- f3d3
+- b6c6
+- d3d2
+- d6e7
+- h6g7
+- e7d6
+- g7g1
+- e8c8
+- b1c2
+- c6b7
+- d2d3
+- c8e8
+- c3c4
+- d6b4
+- c2d1
+- b4c3
+- d3c3
+- b7a7
+- c3a3
+- a7b7
+- a3d3
+- b7b6
+- g1g7
+- b6c6
+- d1c1
+- c6b6
+- g7h6
+- e4e7
+- c1d1
+- b6c7
+- d3f3
+- c7b8
+- c4d5
+- e8d8
+- f3e3
+- d8c8
+- d1e1
+- e7g7
+- h6g7
+- c8g8
+- g7g8
+- b8a7
+- g8g7
+- a7b8
+- e3e8
+state_tag_history:
 - rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1
 - rnbqkbnr/pppppppp/8/8/3P4/8/PPP1PPPP/RNBQKBNR b KQkq - 0 1
 - rnbqkbnr/ppp1pppp/8/3p4/3P4/8/PPP1PPPP/RNBQKBNR w KQkq - 0 2
@@ -147,152 +296,3 @@ fen_history:
 - 8/k5Q1/5p2/3P1P2/3P4/4R3/P7/4K3 b - - 2 73
 - 1k6/6Q1/5p2/3P1P2/3P4/4R3/P7/4K3 w - - 3 74
 - 1k2R3/6Q1/5p2/3P1P2/3P4/8/P7/4K3 b - - 4 74
-final_game_result: win_for_white
-move_history:
-- d2d4
-- d7d5
-- c1f4
-- c7c5
-- e2e3
-- g8f6
-- g1f3
-- a7a6
-- c2c3
-- b8d7
-- b1d2
-- d8c7
-- f4c7
-- e7e6
-- c7f4
-- f8e7
-- f3e5
-- e8g8
-- a1c1
-- h7h6
-- f1d3
-- f8e8
-- f4h6
-- g7h6
-- h1g1
-- e7d8
-- g2g3
-- d8c7
-- f2f4
-- d7b6
-- g3g4
-- c8d7
-- e5d7
-- a8d8
-- d7c5
-- g8h8
-- c5a6
-- b7a6
-- f4f5
-- e6e5
-- d2f3
-- f6g4
-- g1g4
-- e5e4
-- d3f1
-- e4f3
-- f1h3
-- h6h5
-- d1f3
-- h5g4
-- f3h1
-- g4h3
-- c1c2
-- d8c8
-- e1e2
-- c7b8
-- e2d1
-- b6c4
-- h1f3
-- h8g7
-- f3h3
-- e8e4
-- h3f1
-- b8h2
-- f1h3
-- h2d6
-- c2f2
-- c8e8
-- d1c2
-- d6e7
-- b2b4
-- f7f6
-- b4b5
-- e7a3
-- c2d3
-- a6a5
-- h3f3
-- g7g8
-- d3c2
-- g8f7
-- f3h3
-- a3d6
-- f2f3
-- a5a4
-- c2b1
-- a4a3
-- h3h1
-- f7e7
-- h1h3
-- c4e3
-- f3e3
-- e7d7
-- h3h6
-- d7c8
-- e3f3
-- d6e7
-- f3f2
-- c8b7
-- b5b6
-- b7b6
-- f2f3
-- e7d6
-- f3d3
-- b6c6
-- d3d2
-- d6e7
-- h6g7
-- e7d6
-- g7g1
-- e8c8
-- b1c2
-- c6b7
-- d2d3
-- c8e8
-- c3c4
-- d6b4
-- c2d1
-- b4c3
-- d3c3
-- b7a7
-- c3a3
-- a7b7
-- a3d3
-- b7b6
-- g1g7
-- b6c6
-- d1c1
-- c6b6
-- g7h6
-- e4e7
-- c1d1
-- b6c7
-- d3f3
-- c7b8
-- c4d5
-- e8d8
-- f3e3
-- d8c8
-- d1e1
-- e7g7
-- h6g7
-- c8g8
-- g7g8
-- b8a7
-- g8g7
-- a7b8
-- e3e8
