--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,13 +176,15 @@ fix =true
 # Enable import sorting (alphabetical + group order)
 select = ["I", "F", "E", "B", "TCH", "UP","SIM","RUF","RET","N","A",
 "ANN", "PERF", "TRY","LOG","RSE","ICN","TID","Q","W",
+"ISC","PIE","ERA","TD"
 ]  # I = imports, F = pyflakes, E = pycodestyle, TCH = type-checking, B = black
 
 # Allow auto-fixing for imports and type-checking imports
-fixable = ["I", "TCH", "F401","UP","SIM","RUF","RET","N","A","TRY","ANN","TID","PERF"]
+fixable = ["I", "TCH", "F401","UP","SIM","RUF","RET","N","A","TRY","ANN","TID","PERF",
+"PIE","TD","ISC","ERA"]
 
 # Ignore rules you don't care about
-ignore = ["E501","ANN401", "D101", "D103", "D417"]
+ignore = ["E501","ANN401", "D101", "D103", "D417","TD003","TD002",]
 
 # Optional: add your first-party package to extend the known group
 [tool.ruff.lint.per-file-ignores]
