--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,9 @@ dependencies = [
     "zstandard",
     "rich",
     "valanga>=0.1.14",
-    "atomheart>=0.1.7  @ file:/home/pompote/oldata/victor/atomheart/",
-    "algorhino-coral>=0.1.10",
-    "algorhino-anemone>=0.1.11 @ file:/home/pompote/oldata/victor/anemone/",
+    "atomheart>=0.1.7",   
+    "algorhino-coral>=0.1.11",
+    "algorhino-anemone>=0.1.13",
 ]
 
 
@@ -207,7 +207,8 @@ extension-pkg-whitelist = ["PyQt5", "PySide6"]
 max-line-length = 88
 
 #[tool.pylint.messages_control]
-disable = ["C0301"]
+disable = ["C0301","W0511","R0903",    "unnecessary-ellipsis","R0902","R0913","R0912","R0915","R0917","R0911","R0914"]
+
 
 [tool.pylint.typecheck]
 # Optional: same as init-hook in .pylintrc
@@ -286,10 +287,10 @@ deps = [
   "gdown",
   "zstandard",
   "rich",
-    "valanga>=0.1.14",
-    "atomheart>=0.1.7",
-    "algorhino-coral>=0.1.10",
-    "algorhino-anemone>=0.1.11 @ file:/home/juno/anemone",
+      "valanga>=0.1.14",
+    "atomheart>=0.1.7",   
+    "algorhino-coral>=0.1.11",
+    "algorhino-anemone>=0.1.13",
 ]
 set_env = { PYTHONPATH = "{toxinidir}" }
 commands = [
@@ -326,10 +327,10 @@ deps = [
   "gdown",
   "zstandard",
   "rich",
-     "valanga>=0.1.14",
-    "atomheart>=0.1.7",
-    "algorhino-coral>=0.1.10",
-    "algorhino-anemone>=0.1.11",
+      "valanga>=0.1.14",
+    "atomheart>=0.1.7",   
+    "algorhino-coral>=0.1.11",
+    "algorhino-anemone>=0.1.13",
 ]
 set_env = { MYPYPATH = "{toxinidir}" }
 commands = [
