Enable accelerate mode in player configs and add crushing start option

--- a/src/chipiron/data/players/player_config/Sequool.yaml
+++ b/src/chipiron/data/players/player_config/Sequool.yaml
@@ -1,6 +1,7 @@
 name: Sequool
 main_move_selector:
   type: TreeAndValue
+  accelerate_when_winning: True
   anemone_args: 
     type: TreeAndValue
     node_selector:
