--- a/src/chipiron/data/players/player_config/UniformDepth.yaml
+++ b/src/chipiron/data/players/player_config/UniformDepth.yaml
@@ -1,6 +1,7 @@
 name: Uniform
 main_move_selector:
   type: TreeAndValue
+  accelerate_when_winning: True
   anemone_args: 
     type: TreeAndValue
     node_selector:
