--- a/src/chipiron/data/players/player_config/Sequool.yaml
+++ b/src/chipiron/data/players/player_config/Sequool.yaml
@@ -5,10 +5,14 @@ main_move_selector:
   anemone_args: 
     type: TreeAndValue
     node_selector:
-      type: Sequool
-      recursive_selection_on_all_nodes: True
-      random_depth_pick: False
-      consider_all_lesser_tree_depth: False
+      type: Composed
+      priority:
+        type: PriorityNoop
+      base:
+        type: Sequool
+        recursive_selection_on_all_nodes: True
+        random_depth_pick: False
+        consider_all_lesser_tree_depth: False
     index_computation : min_global_change
     opening_type: all_children
     recommender_rule:
