--- a/src/chipiron/data/players/player_config/chipiron/chipiron.yaml
+++ b/src/chipiron/data/players/player_config/chipiron/chipiron.yaml
@@ -5,8 +5,12 @@ main_move_selector:
   anemone_args: 
     type: TreeAndValue
     node_selector:
-      type: RecurZipfBase
-      branch_explorer_priority: priority_best
+      type: Composed
+      priority:
+        type: PriorityNoop
+      base:
+        type: RecurZipfBase
+        branch_explorer_priority: priority_best
     opening_type: all_children
     recommender_rule:
       type: almost_equal_logistic
