--- a/src/chipiron/scripts/learn_from_scratch_value_and_fixed_boards/tests/test_exp_options.yaml
+++ b/src/chipiron/scripts/learn_from_scratch_value_and_fixed_boards/tests/test_exp_options.yaml
@@ -32,6 +32,10 @@ base_script_args:
 implementation_args:
   use_board_modification: True
   use_rust_boards: False
+  search_dynamics_addon:
+    type: CHESS_COPY_STACK
+    copy_stack_until_depth: 2
+    deep_copy_legal_moves: true
 
 evaluating_player_args:
   name: RecurZipfBase3
