--- a/src/chipiron/scripts/one_match/inputs/base/exp_options.yaml
+++ b/src/chipiron/scripts/one_match/inputs/base/exp_options.yaml
@@ -13,3 +13,7 @@ base_script_args:
 implementation_args:
   use_board_modification: True
   use_rust_boards: False
+  search_dynamics_addon:
+    type: CHESS_COPY_STACK
+    copy_stack_until_depth: 2
+    deep_copy_legal_moves: true
