--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,26 +3,15 @@ name: ci
 on:
   push:
     branches:
-      - 'main'
-      - '3.13'
-
+      - main
+      - "3.13"
+  pull_request:
 
 env:
   TEST_TAG: victorgabillon/chipiron:test
   LATEST_TAG: victorgabillon/chipiron:latest
 
 jobs:
-
-
-name: ci
-
-on:
-  push:
-    branches: [ main, "3.13" ]
-  pull_request:
-
-jobs:
-
   test:
     runs-on: ubuntu-latest
     steps:
@@ -62,39 +51,42 @@ jobs:
           PIP_NO_CACHE_DIR: "1"
         run: tox
 
-
   docker:
+    needs: test   # 👈 runs only if test succeeds
     runs-on: ubuntu-latest
+
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+
+      - name: Build and push (test tag)
         uses: docker/build-push-action@v5
         with:
           file: Dockerfile
-          dockerfile: Dockerfile
           push: true
           tags: ${{ env.TEST_TAG }}
 
-      - name: Test o
+      - name: Test container
         run: |
-          docker run -u=$(id -u $USER):$(id -g $USER) -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix:rw --rm ${{ env.TEST_TAG }} python tests/integration_test/one_match/test_integration.py --log_level ERROR
-      -
-        name: Build and push
+          docker run --rm \
+            -u=$(id -u):$(id -g) \
+            -e DISPLAY=$DISPLAY \
+            -v /tmp/.X11-unix:/tmp/.X11-unix:rw \
+            ${{ env.TEST_TAG }} \
+            python tests/integration_test/one_match/test_integration.py --log_level ERROR
+
+      - name: Build and push (latest tag)
         uses: docker/build-push-action@v5
         with:
           file: Dockerfile
-          dockerfile: Dockerfile
           push: true
           tags: ${{ env.LATEST_TAG }}
