--- a/src/chipiron/scripts/learn_nn_supervised/exp_options.yaml
+++ b/src/chipiron/scripts/learn_nn_supervised/exp_options.yaml
@@ -1,9 +1,9 @@
 nn_trainer_args:
-  neural_network_architecture_args_path_to_yaml_file: 'src/chipiron/scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/nn_pp2d3_prelu_new/architecture.yaml'
+  neural_network_architecture_args_path_to_yaml_file: 'package://scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/nn_pp2d3_prelu_new/architecture.yaml'
   reuse_existing_model:  True
   reuse_existing_trainer:  False
-  specific_saving_folder: 'src/chipiron/scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/nn_pp2d3_prelu_new'
-  nn_parameters_file_if_reusing_existing_one: 'src/chipiron/scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/nn_pp2d3_prelu_new/param_multi_layer_perceptron_772_200_20_1_parametric_relu_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt'
+  specific_saving_folder: 'package://scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/nn_pp2d3_prelu_new'
+  nn_parameters_file_if_reusing_existing_one: 'package://scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/nn_pp2d3_prelu_new/param_multi_layer_perceptron_772_200_20_1_parametric_relu_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt'
   starting_lr: .001
   momentum_op: .9
   scheduler_step_size: 1
