--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,8 +109,10 @@ exclude = ["tests*", "docs", "examples", "build", "dist", "venv", "env", ".venv"
 [tool.pytest.ini_options]
 addopts = "--cov=chipiron"
 testpaths = ["tests"]
+norecursedirs = ["src"]
 markers = [
     "integration: marks integration tests (deselect with '-m \"not integration\"')",
+  "external_data: tests requiring external downloaded data",
 ]
 
 [tool.mypy]
@@ -260,7 +262,10 @@ commands_pre = [
 ]
 commands = [
   ["python", "-c", "import chipiron; print(chipiron.__file__)"],
-  ["pytest", "--basetemp={envtmpdir}/pytest-tmp", "-m", "not integration", "{posargs}"],
+  ["pytest",
+   "--basetemp={envtmpdir}/pytest-tmp",
+   "-m", "not integration and not external_data",
+   "{posargs}"],
 ]
 
 # ----------------
