--- a/src/chipiron/data/players/player_config/UniformDepth3.yaml
+++ b/src/chipiron/data/players/player_config/UniformDepth3.yaml
@@ -21,11 +21,11 @@ main_move_selector:
   evaluator_args:
     internal_representation_type: '364_bug'
     master_board_evaluator:
-      syzygy_evaluation: True
+      oracle_evaluation: True
       evaluation_scale: stockfish_based
       board_evaluator:
         type: neural_network
         neural_nets_model_and_architecture:
           model_weights_file_name: "package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_player_to_move.pt"
           nn_architecture_args_path_to_yaml_file: 'package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/architecture.yaml'
-syzygy_play: True
+oracle_play: True
